# fullstackrustcourse

./: .gitignore  Cargo.toml  FronttoBackConnect.md  ReadMe.md
arustyintro/: Cargo.toml
arustyintro/src/: compound.rs  controlflow.rs  functions.rs  loops.rs  main.rs  ownership.rs  ownership_borrowing.rs  structs.rs  variables.rs
frontend/: Cargo.toml  index.html  style.css
frontend/src/: form.rs  formshort.rs  main.rs  products.rs  router.rs
server/: Cargo.toml
server/src/: handlers.rs  main.rs
