[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
axum = "0.6.4"
tokio = { version = "1.24.2", features = ["full"] }
http = "0.2.8"
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "json", "postgres", "macros"] }
sqlx-core = "0.6.2"
dotenv = "0.15.0"
serde = "1.0.152"
serde_json = "1.0.91"
